# Asteroids

./: Asteroid.cpp  Asteroid.h  CMakeLists.txt  DataDefinition.h  Projectile.cpp  Projectile.h  ProjectilesManager.cpp  ProjectilesManager.h  SpaceShip.cpp  SpaceShip.h  main.cpp
cmake/: FindSDL2.cmake
